--- a/src/index.css
+++ b/src/index.css
@@ -126,3 +126,57 @@
   0% { opacity: 1; }
   100% { opacity: 0; }
 }
+
+.chat-typing-bubble {
+  background-color: #e5e7eb;
+  padding: 8px 28px;
+  -webkit-border-radius: 20px;
+  -webkit-border-bottom-left-radius: 2px;
+  -moz-border-radius: 8px;
+  -moz-border-radius-bottomleft: 2px;
+  border-radius: 8px;
+  border-bottom-left-radius: 0px;
+  display: inline-block;
+}
+.typing {
+  align-items: center;
+  display: flex;
+  height: 17px;
+}
+.typing .dot {
+  animation: typingAnimation 1.8s infinite ease-in-out;
+  background-color: #b1b1b1;
+  border-radius: 50%;
+  height: 5px;
+  margin-right: 4px;
+  vertical-align: middle;
+  width: 5px;
+  display: inline-block;
+}
+.typing .dot:nth-child(1) {
+  animation-delay: 200ms;
+}
+.typing .dot:nth-child(2) {
+  animation-delay: 300ms;
+}
+.typing .dot:nth-child(3) {
+  animation-delay: 400ms;
+}
+.typing .dot:last-child {
+  margin-right: 0;
+}
+
+@keyframes typingAnimation {
+  0% {
+    transform: translateY(0px);
+    background-color: #9a9a9a;
+  }
+  28% {
+    transform: translateY(-7px);
+    background-color: #787777;
+  }
+  44% {
+    transform: translateY(0px);
+    background-color: #504f4f;
+  }
+}
